--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -12,6 +12,11 @@ on:
         # Run every day at 2 AM UTC
         - cron: '0 2 * * *'
 
+permissions:
+    contents: read
+    security-events: write
+    actions: read
+
 jobs:
     # Basic security checks that must pass before other jobs
     essential-security:
