--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -101,9 +101,9 @@ jobs:
                   # Download Gitleaks binary
                   curl -sSfL https://github.com/gitleaks/gitleaks/releases/download/v8.28.0/gitleaks_8.28.0_linux_x64.tar.gz | tar -xz
 
-                  # Run Gitleaks scan with SARIF output for GitHub Security
+                  # Run Gitleaks scan
                   echo "🔍 Running Gitleaks secret scan..."
-                  ./gitleaks detect --config=.gitleaks.toml --verbose --report-format=sarif --report-path=gitleaks.sarif || exit_code=$?
+                  ./gitleaks detect --config=.gitleaks.toml --verbose || exit_code=$?
 
                   # Check results
                   if [ "${exit_code:-0}" -eq 1 ]; then
@@ -116,12 +116,7 @@ jobs:
                   echo "✅ No secrets detected by Gitleaks - repository is clean!"
                   echo "clean=true" >> "$GITHUB_OUTPUT"
 
-            - name: Upload Gitleaks SARIF to GitHub Security
-              if: always() && hashFiles('gitleaks.sarif') != ''
-              uses: github/codeql-action/upload-sarif@v3
-              with:
-                  sarif_file: gitleaks.sarif
-                  category: gitleaks
+            # Note: SARIF upload disabled - requires GitHub Advanced Security
 
     license-compliance:
         name: License Compliance Check
@@ -196,19 +191,20 @@ jobs:
               with:
                   project: 'price-updater'
                   path: '.'
-                  format: 'SARIF'
+                  format: 'HTML'
                   out: 'dependency-check-report'
                   args: >
                       --enableRetired
                       --enableExperimental
                       --nvdApiDelay 2000
 
-            - name: Upload OWASP Results to GitHub Security
+            - name: Upload OWASP Report as Artifact
               if: always()
-              uses: github/codeql-action/upload-sarif@v3
+              uses: actions/upload-artifact@v4
               with:
-                  sarif_file: dependency-check-report/dependency-check-report.sarif
-                  category: dependency-check
+                  name: owasp-dependency-check-report
+                  path: dependency-check-report/
+                  retention-days: 30
 
     dependency-scan:
         name: Dependency Security Scan
