--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -4,10 +4,12 @@ on:
     push:
         branches:
             - main
+            - develop
     pull_request:
         branches:
             - main
             - release
+            - develop
     schedule:
         # Run every day at 2 AM UTC
         - cron: '0 2 * * *'
