security GH action

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -142,6 +142,9 @@ jobs:
                   node-version: '22'
                   cache: 'npm'
 
+            - name: Copy Environment File
+              run: cp .env.testing .env
+
             - name: Install Dependencies
               run: |
                   composer install --no-interaction --prefer-dist --optimize-autoloader
@@ -188,7 +191,7 @@ jobs:
                   npm install -g license-checker
 
                   # Check licenses (including common font and build tool licenses)
-                  license-checker --onlyAllow 'MIT;Apache-2.0;BSD;BSD-2-Clause;BSD-3-Clause;ISC;CC0-1.0;Unlicense;WTFPL;OFL-1.1;SIL OFL 1.1;MPL-2.0' --production
+                  license-checker --onlyAllow 'MIT;Apache-2.0;BSD;BSD-2-Clause;BSD-3-Clause;ISC;CC0-1.0;Unlicense;WTFPL;OFL-1.1;SIL OFL 1.1;MPL-2.0' --excludePrivatePackages --production
 
     owasp-dependency-check:
         name: OWASP Dependency Check
