--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -192,7 +192,7 @@ jobs:
         name: Dependency Review
         runs-on: ubuntu-latest
         needs: [check-advanced-security, essential-security]
-        if: needs.essential-security.outputs.secrets-clean == 'true' && github.event_name == 'pull_request'
+        if: needs.essential-security.outputs.secrets-clean == 'true' && needs.check-advanced-security.outputs.ghas-enabled == 'true' && github.event_name == 'pull_request'
 
         permissions:
             contents: read
