--- a/.github/workflows/release_cobrabot.yml
+++ b/.github/workflows/release_cobrabot.yml
@@ -191,22 +191,37 @@ jobs:
                     --name "$APP" --resource-group "$RG" \
                     --settings PHP_VERSION=8.4
 
-            - name: Set health check path using generic configurations
+            - name: Ensure health check path
+              shell: bash
               run: |
-                  echo "Checking current configuration..."
-                  CURRENT_CONFIG=$(az webapp config show --name "$APP" --resource-group "$RG" --query '{alwaysOn: alwaysOn, healthCheckPath: healthCheckPath}' -o json || echo '{}')
-                  echo "Current config: $CURRENT_CONFIG"
+                APP_ID=$(az webapp show -g "$RG" -n "$APP" ${SLOT:+--slot "$SLOT"} --query id -o tsv)
+                CURRENT=$(az webapp show --ids "$APP_ID" --query "siteConfig.healthCheckPath" -o tsv)
+                if [ "$CURRENT" != "/health" ]; then
+                  echo "Setting healthCheckPath to /health (was: ${CURRENT:-<empty>})"
+                  az webapp update --ids "$APP_ID" --set siteConfig.healthCheckPath="/health"
+                else
+                  echo "healthCheckPath already /health; skipping"
+                fi
 
-                  # Only update if configuration differs (check both alwaysOn and healthCheckPath)
-                  if ! echo "$CURRENT_CONFIG" | grep -q '"alwaysOn": true' || ! echo "$CURRENT_CONFIG" | grep -q '"healthCheckPath": "/health"'; then
-                    echo "Updating configuration..."
-                    az webapp config set \
-                      --name "$APP" \
-                      --resource-group "$RG" \
-                      --generic-configurations '{"alwaysOn": true, "healthCheckPath": "/health"}' || true
-                  else
-                    echo "Configuration already correct, skipping update"
-                  fi
+            - name: Enable Always On when supported
+              shell: bash
+              run: |
+                APP_INFO=$(az webapp show -g "$RG" -n "$APP" ${SLOT:+--slot "$SLOT"})
+                APP_ID=$(jq -r '.id' <<<"$APP_INFO")
+                PLAN_ID=$(jq -r '.serverFarmId' <<<"$APP_INFO")
+                PLAN_TIER=$(az appservice plan show --ids "$PLAN_ID" --query "sku.tier" -o tsv)
+
+                echo "App Service Plan tier: $PLAN_TIER"
+                case "$PLAN_TIER" in
+                  Basic|Standard|Premium|PremiumV2|PremiumV3|PremiumV4|Isolated|IsolatedV2)
+                    echo "Enabling Always On"
+                    az webapp config set --ids "$APP_ID" --always-on true
+                    ;;
+                  *)
+                    echo "Skipping Always On (not supported on '$PLAN_TIER')."
+                    ;;
+                esac
+
 
             - name: Set port 8080
               run: |
