--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,18 +1,18 @@
 name: Security Scan
 
 on:
-    push:
-        branches:
-            - main
-            - develop
+    # push:
+    #     branches:
+    #         - main
+    #         - develop
     pull_request:
         branches:
             - main
             - release
             - develop
-    schedule:
-        # Run every day at 2 AM UTC
-        - cron: '0 2 * * *'
+    # schedule:
+    #     # Run every day at 2 AM UTC
+    #     - cron: '0 2 * * *'
 
 permissions:
     contents: read
