--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"private": true,
 	"type": "module",
 	"name": "price-updater",
+	"version": "1.0.0",
 	"scripts": {
 		"build": "vite build",
 		"build:ssr": "vite build && vite build --ssr",
@@ -29,7 +30,7 @@
 		"@testing-library/jest-dom": "^6.8.0",
 		"@testing-library/react": "^16.3.0",
 		"@types/jest": "^30.0.0",
-		"@types/node": "^24.5.1",
+		"@types/node": "^24.5.2",
 		"@types/react": "^19.1.13",
 		"@types/react-dom": "^19.1.9",
 		"@typescript-eslint/eslint-plugin": "^8.44.0",
@@ -42,10 +43,10 @@
 		"jest": "^30.1.3",
 		"jest-environment-jsdom": "^30.1.2",
 		"prettier": "^3.6.2",
-		"prettier-plugin-organize-imports": "^4.2.0",
+		"prettier-plugin-organize-imports": "^4.3.0",
 		"prettier-plugin-tailwindcss": "^0.6.14",
 		"sass-embedded": "^1.92.1",
-		"ts-jest": "^29.4.2",
+		"ts-jest": "^29.4.3",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.9.2",
 		"typescript-eslint": "^8.44.0",
@@ -62,7 +63,7 @@
 		"@fontsource-variable/quicksand": "^5.2.10",
 		"@fontsource-variable/source-sans-3": "^5.2.9",
 		"@headlessui/react": "^2.2.8",
-		"@inertiajs/react": "^2.1.6",
+		"@inertiajs/react": "^2.1.7",
 		"@radix-ui/react-avatar": "^1.1.10",
 		"@radix-ui/react-checkbox": "^1.3.3",
 		"@radix-ui/react-collapsible": "^1.1.12",
