--- a/tsconfig.json
+++ b/tsconfig.json
@@ -118,6 +118,8 @@
 		"resources/js/**/*.ts",
 		"resources/js/**/*.d.ts",
 		"resources/js/**/*.tsx",
-		"resources/js/**/*.js"
+		"resources/js/**/*.js",
+		"resources/js/types/**/*.ts",
+		"jest.config.ts"
 	]
 }
