Disable OssIndex in security workflow

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -304,6 +304,7 @@ jobs:
                       --enableRetired
                       --enableExperimental
                       --nvdApiDelay 2000
+                      --disableOssIndex
 
             - name: Upload OWASP Report as Artifact
               if: always()
